2001-02-04  Maciej Stachowiak  <mjs@eazel.com>

	* indent.sh: Script that calls indent with the right parameters to
	get a GNOME coding style (Nautilus subvariant).

	* components/help/hyperbola-filefmt.c,
	components/help/hyperbola-filefmt.h,
	components/help/hyperbola-main.c,
	components/help/hyperbola-nav-index.c,
	components/help/hyperbola-nav-search.c,
	components/help/hyperbola-nav-tree.c,
	components/help/hyperbola-nav.h,
	components/help/hyperbola-types.h: Run indent.sh on these.

2001-02-03  John Sullivan  <sullivan@eazel.com>

	Fixed bug 6254 ("Display" name for grouping in "Folder Views"
	category is poor)

	* libnautilus-extensions/nautilus-global-preferences.c:
	(global_preferences_install_descriptions),
	(global_preferences_create_dialog): Verafied a little text.

2001-02-03  Eskil Heyn Olsen  <eskil@eazel.com>

	* components/throbber/Makefile.am:
	Added the oaf.in files to EXTRA_DIST (tinderbox fix)

2001-02-03  Gene Z. Ragan  <gzr@eazel.com>

	Do a simple check for NULL instead of using
	g_return_if_fail.  We don't need the error
	reported to the terminal.
	
	* libnautilus-extensions/nautilus-volume-monitor.c:
	(get_removable_volumes), (volume_is_removable),
	(volume_is_read_only):

2001-02-02  Eskil Heyn Olsen  <eskil@eazel.com>

	* components/services/install/command-line/eazel-alt-install-corba.
	c: (tree_helper_helper), (tree_helper):
	Added check for PackageBreaks iterators.
	
	* components/services/install/lib/eazel-install-corba-callback.c:
	(impl_install_failed):
	Leakfix, freeing the list given to the signal handler after
	handling.
	
	* components/services/install/lib/eazel-install-corba-types.c:
	(empty_hash_table),
	(packagedata_tree_from_corba_packagedatastructlist):
	Leakfix, now correctly frees the contents of the md5_hashtable and
	unrefs the proper objects.

	* components/services/install/lib/eazel-install-logic2.c:
	(eazel_install_check_existing_packages), (get_softcat_info),
	(is_satisfied), (is_satisfied_features),	