@@ -107,6 +107,14 @@ fi
 
 unset FOUND_ANY
 
+sysname=`uname -s`
+
+if [ "$sysname" = "SunOS" ]; then
+	killcmd="pkill"
+else
+	killcmd="killall"
+fi
+
 for NAME in $AUX_PROGS; do
     EGREP_PATTERN=`echo $NAME | sed -e 's/\(.\)\(.*\)/[\1]\2/' | sed -e 's/\[\\\^\]/\[\\^\]/'`
     COUNT=`ps auxww | egrep $EGREP_PATTERN | grep -v emacs | grep -v egrep | wc -l`
@@ -120,9 +128,9 @@ for NAME in $AUX_PROGS; do
 
 	if [ "$quiet" != "yes" ]
 	then
-	    killall "$NAME"
+	    $killcmd "$NAME"
 	else
-	    killall "$NAME" > /dev/null 2>&1
+	    $killcmd "$NAME" > /dev/null 2>&1
 	fi
     fi
 done
