@@ -1,3 +1,9 @@
+2001-02-04  Jason Leach  <jasonleach@usa.net>
+
+	reviewed by: Maciej Stachowiak <mjs@eazel.com>	
+	
+	* nautilus-clean.sh: Update to work with Solaris.
+
 2001-02-04  Maciej Stachowiak  <mjs@eazel.com>
 
 	* indent.sh: Script that calls indent with the right parameters to
